--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,5 +1,6 @@
 {
   "alwaysUpdateLinks": true,
   "promptDelete": false,
-  "showLineNumber": false
+  "showLineNumber": false,
+  "propertiesInDocument": "visible"
 }
